fixed an issue where an empty algorithm displayed the wrong padding

--- a/public/stylesheets/simulation.css
+++ b/public/stylesheets/simulation.css
@@ -123,7 +123,7 @@
     border: none;
     white-space: pre;
     text-align: left;
-    padding-left: 2px;
+    padding-left: 10px;
 }
 
 #q_algo {
